--- a/src/main/res/layout/style_polygon.xml
+++ b/src/main/res/layout/style_polygon.xml
@@ -75,4 +75,6 @@
         android:gravity="center_vertical"
         android:text="@string/fill"
         android:textAppearance='?android:attr/textAppearanceMedium'/>
+
+    <include layout="@layout/style_text" />
 </LinearLayout>
