Add clear button to text edit, fix #473

--- a/src/main/res/layout/formtemplate_edittext.xml
+++ b/src/main/res/layout/formtemplate_edittext.xml
@@ -25,4 +25,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:drawableEnd="?attr/ic_cancel"
+    android:drawablePadding="8dp"
+    android:drawableRight="?attr/ic_cancel"
     android:textColor="?attr/control_disabled"/>
