--- a/src/main/res/layout/formtemplate_autoedittext.xml
+++ b/src/main/res/layout/formtemplate_autoedittext.xml
@@ -24,4 +24,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:completionThreshold="1"
+    android:drawableEnd="?attr/ic_cancel"
+    android:drawablePadding="8dp"
+    android:drawableRight="?attr/ic_cancel"
     android:textColor="?attr/control_disabled"/>
