--- a/src/main/res/layout/activity_layer_settings.xml
+++ b/src/main/res/layout/activity_layer_settings.xml
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             app:tabGravity="fill"
-            app:tabMode="fixed"/>
+            app:tabMode="scrollable"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
