--- a/src/main/res/layout/layout_resources.xml
+++ b/src/main/res/layout/layout_resources.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -23,31 +23,30 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-    >
+              android:orientation="vertical">
+
+    <include layout="@layout/actionbar"/>
 
     <HorizontalScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
-        >
+        android:scrollbars="none">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/path"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/path"
             android:layout_margin="5dp"
             android:gravity="center_vertical"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textStyle="bold"
                 />
 
@@ -56,18 +55,38 @@
     </HorizontalScrollView>
 
     <View
-        android:layout_height="1dp"
         android:layout_width="wrap_content"
-        android:background="@android:color/darker_gray"
+        android:layout_height="1dp"
         android:layout_margin="2dp"
-        />
+        android:background="@android:color/darker_gray"/>
 
     <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:clickable="true"
+        android:focusable="false"/>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_margin="2dp"
+        android:background="@android:color/darker_gray"/>
+
+    <LinearLayout
+        android:id="@+id/button_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="false"
-        android:id="@+id/listView"
-        />
+        android:gravity="end"
+        android:padding="8dp">
 
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:background="@drawable/dark_button"
+            android:text="@string/add"
+            android:textColor="@color/color_white"/>
+    </LinearLayout>
 </LinearLayout>
