--- a/src/main/res/layout/row_loading.xml
+++ b/src/main/res/layout/row_loading.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -22,35 +22,32 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/loading_row"
-              android:orientation="horizontal"
+<LinearLayout android:id="@+id/loading_row"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="?android:attr/listPreferredItemHeight"
-    >
+              android:orientation="horizontal">
 
 
     <ProgressBar
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:id="@+id/progressBar"
-        android:indeterminate="true"
-        android:indeterminateOnly="true"
         android:gravity="center"
-        />
+        android:indeterminate="true"
+        android:indeterminateOnly="true"/>
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:ellipsize="marquee"
-        android:textStyle="bold"
         android:layout_margin="2dp"
+        android:layout_weight="1"
+        android:ellipsize="marquee"
+        android:gravity="center_vertical"
         android:text="@string/message_loading"
-        />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold"/>
 </LinearLayout>
