--- a/src/main/res/layout/row_ngwlayer_doublecheck.xml
+++ b/src/main/res/layout/row_ngwlayer_doublecheck.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -22,110 +21,93 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/ngw_layer_doublecheck_row"
-              android:orientation="horizontal"
+<LinearLayout android:id="@+id/ngw_layer_doublecheck_row"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="?android:attr/listPreferredItemHeight"
-    >
+              android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/ivIcon"
         android:layout_width="32dp"
         android:layout_height="fill_parent"
-        android:layout_margin="5dp"
         android:layout_gravity="center"
-        />
+        android:layout_margin="5dp"/>
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:ellipsize="end"
-            android:textStyle="bold"
             android:layout_margin="2dp"
-            android:singleLine="true"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
             android:maxLines="1"
-            />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tvDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:gravity="center_vertical"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:ellipsize="marquee"
             android:layout_margin="2dp"
-            />
+            android:layout_weight="0"
+            android:ellipsize="marquee"
+            android:gravity="center_vertical"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/check_vector"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:gravity="center"
-        >
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/type2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/vector"
-            android:id="@+id/type2"
             android:layout_margin="2dp"
-            />
+            android:text="@string/vector"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
 
         <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/checkBox2"
-            android:layout_weight="0"
-            />
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <View
-        android:layout_height="fill_parent"
         android:layout_width="1dp"
-        android:background="@android:color/darker_gray"
+        android:layout_height="fill_parent"
         android:layout_margin="2dp"
-        />
+        android:background="@android:color/darker_gray"/>
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/check_raster"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:gravity="center"
-        >
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/type1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/raster"
-            android:id="@+id/type1"
             android:layout_margin="2dp"
-            />
+            android:text="@string/raster"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
 
         <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/checkBox1"
-            android:layout_weight="0"
-            />
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
-
-
 </LinearLayout>
