--- a/src/main/res/layout/layout_resources.xml
+++ b/src/main/res/layout/layout_resources.xml
@@ -27,7 +27,9 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <include layout="@layout/actionbar"/>
+    <include
+        layout="@layout/actionbar"
+        android:visibility="gone"/>
 
     <HorizontalScrollView
         android:layout_width="fill_parent"
@@ -79,7 +81,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/button1"
