Fix dialog paddings

--- a/src/main/res/layout/dialog_create_local_tms.xml
+++ b/src/main/res/layout/dialog_create_local_tms.xml
@@ -22,13 +22,14 @@
   -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="?attr/dialogPreferredPadding"
+            android:paddingRight="?attr/dialogPreferredPadding">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:orientation="vertical">
 
         <EditText
@@ -37,7 +38,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/layer_name"
             android:inputType="text"
-            android:singleLine="true" />
+            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/layer_type_summary"
@@ -48,13 +49,13 @@
             android:padding="2dp"
             android:text="@string/layer_type_optional"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="?android:attr/textColorPrimary" />
+            android:textColor="?android:attr/textColorPrimary"/>
 
         <Spinner
             android:id="@+id/layer_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:prompt="@string/layer_type" />
+            android:prompt="@string/layer_type"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -64,7 +65,7 @@
             android:padding="2dp"
             android:text="@string/tms_layer_cache_size"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="?android:attr/textColorPrimary" />
+            android:textColor="?android:attr/textColorPrimary"/>
 
         <Spinner
             android:id="@+id/layer_cache"
@@ -72,6 +73,6 @@
             android:layout_height="wrap_content"
             android:entries="@array/tms_tile_cache_size"
             android:entryValues="@array/tms_tile_cache_size_val"
-            android:prompt="@string/layer_type" />
+            android:prompt="@string/layer_type"/>
     </LinearLayout>
 </ScrollView>
