--- a/src/main/res/layout/dialog_edittext.xml
+++ b/src/main/res/layout/dialog_edittext.xml
@@ -24,4 +24,6 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="8dp"
+          android:layout_marginLeft="?attr/dialogPreferredPadding"
+          android:layout_marginRight="?attr/dialogPreferredPadding"
           android:inputType="text"/>
