--- a/src/main/res/layout/dialog_progress_accurate_location.xml
+++ b/src/main/res/layout/dialog_progress_accurate_location.xml
@@ -32,8 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="16dp"
-        android:paddingEnd="?attr/dialogPreferredPadding"
-        android:paddingStart="?attr/dialogPreferredPadding"/>
+        android:layout_marginTop="16dp"/>
 
     <ProgressBar
         android:id="@+id/progress"
