--- a/src/main/res/layout/fragment_raster_layer_cache.xml
+++ b/src/main/res/layout/fragment_raster_layer_cache.xml
@@ -40,4 +40,12 @@
         android:layout_height="wrap_content"
         android:entries="@array/tms_tile_cache_size"
         android:entryValues="@array/tms_tile_cache_size_val"/>
+
+    <Button
+        android:id="@+id/clear_cache"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/clear_cache"/>
 </LinearLayout>
