--- a/src/main/res/layout/fragment_raster_layer_style.xml
+++ b/src/main/res/layout/fragment_raster_layer_style.xml
@@ -24,6 +24,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
@@ -39,7 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:max="255"/>
+        android:max="255"
+        android:progress="1"/>
 
     <TextView
         android:id="@+id/contrast_seek"
@@ -54,7 +56,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:max="100"/>
+        android:max="100"
+        android:progress="1"/>
 
     <TextView
         android:id="@+id/brightness_seek"
@@ -76,6 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        app:switchPadding="8dp"
         android:text="@string/make_grayscale"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 </LinearLayout>
