Add total tiles count to download dialog, fix #546

--- a/src/main/res/layout/dialog_select_zoom_levels.xml
+++ b/src/main/res/layout/dialog_select_zoom_levels.xml
@@ -59,6 +59,15 @@
             android:textAppearance="?android:attr/textAppearanceSmall"/>
 
         <TextView
+            android:id="@+id/tilesCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Small Text"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+        <TextView
             android:id="@+id/rightIndexValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
