--- a/src/main/res/layout/fragment_layer_general.xml
+++ b/src/main/res/layout/fragment_layer_general.xml
@@ -84,7 +84,7 @@
         <com.edmodo.rangebar.RangeBar
             android:id="@+id/rangebar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_margin="5dp"
             custom:tickCount="26"/>
 
