--- a/src/main/res/layout/fragment_ngw_vector_layer_sync.xml
+++ b/src/main/res/layout/fragment_ngw_vector_layer_sync.xml
@@ -49,6 +49,21 @@
     </LinearLayout>
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/sync_direction"
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+    <Spinner
+        android:id="@+id/sync_direction"
+        android:layout_width="match_parent"
+        android:entries="@array/sync_direction"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"/>
+
+    <TextView
         android:id="@+id/account_name"
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
