--- a/src/main/res/layout/activity_resources.xml
+++ b/src/main/res/layout/activity_resources.xml
@@ -2,11 +2,9 @@
 <!--
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
-  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
-  ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -21,34 +19,16 @@
   ~ You should have received a copy of the GNU Lesser Public License
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:layout_weight="1"
               android:orientation="vertical">
 
-    <HorizontalScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none">
+    <include
+        layout="@layout/actionbar"/>
 
-        <LinearLayout
-            android:id="@+id/path"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Small Text"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold"/>
-        </LinearLayout>
-    </HorizontalScrollView>
+    <include
+        layout="@layout/layout_resources"/>
 
     <View
         android:layout_width="wrap_content"
@@ -56,11 +36,19 @@
         android:layout_margin="2dp"
         android:background="@android:color/darker_gray"/>
 
-    <ListView
-        android:id="@+id/listView"
+    <LinearLayout
+        android:id="@+id/button_panel"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:clickable="true"
-        android:focusable="false"/>
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:padding="8dp">
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:background="@drawable/dark_button"
+            android:text="@string/add"
+            android:textColor="@color/color_white"/>
+    </LinearLayout>
 </LinearLayout>
