Add NextGIS ID sign out

--- a/src/main/res/xml/preferences_ngid.xml
+++ b/src/main/res/xml/preferences_ngid.xml
@@ -21,8 +21,20 @@
   -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <Preference android:key="username" android:title="@string/ngid_username"/>
-    <Preference android:key="email" android:title="@string/ngid_email"/>
-    <Preference android:key="first_name" android:title="@string/ngid_first_name"/>
-    <Preference android:key="last_name" android:title="@string/ngid_last_name"/>
+    <Preference
+        android:key="username"
+        android:title="@string/ngid_username"/>
+    <Preference
+        android:key="email"
+        android:title="@string/ngid_email"/>
+    <Preference
+        android:key="first_name"
+        android:title="@string/ngid_first_name"/>
+    <Preference
+        android:key="last_name"
+        android:title="@string/ngid_last_name"/>
+    <Preference
+        android:key="sign_out"
+        android:persistent="false"
+        android:title="@string/sign_out"/>
 </PreferenceScreen>
