--- a/src/main/res/layout/fragment_ngw_vector_layer_sync.xml
+++ b/src/main/res/layout/fragment_ngw_vector_layer_sync.xml
@@ -4,7 +4,7 @@
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2016-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -58,7 +58,7 @@
     <Spinner
         android:id="@+id/sync_direction"
         android:layout_width="match_parent"
-        android:entries="@array/sync_direction"
+        android:entries="@array/sync_direction_val"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:layout_marginStart="5dp"/>
