--- a/src/main/res/values/arrays.xml
+++ b/src/main/res/values/arrays.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -195,7 +195,7 @@
         <item>@string/simple_renderer</item>
         <item>@string/rule_renderer</item>
     </string-array>
-    <string-array name="sync_direction" translatable="false">
+    <string-array name="sync_direction_val" translatable="false">
         <item>@string/to_ngw</item>
         <item>@string/from_ngw</item>
         <item>@string/both_directions</item>
